--- a/floorSegment.html
+++ b/floorSegment.html
@@ -103,7 +103,7 @@
       cursor: pointer;
     }
 
-    .input-icon {
+    #input-icon {
       width: 10%;
       height: 10%;
     }
@@ -179,8 +179,8 @@
 	  </div>
 	  <div id="file-input-wrapper">
 	  	<input type="file" id="file-input">
-      <!-- <svg class="input-icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43"><path fill="#b8b8b8" d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"></path></svg>
-      Choose a file or drag it here. -->
+      <svg id="input-icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43"><path fill="#b8b8b8" d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"></path></svg>
+      Choose a file or drag it here.
     </div>
 	</div>
 
@@ -417,6 +417,7 @@
     const magicToolButton = document.getElementById('magic-tool');
     const fileInputWrapper = document.getElementById('file-input-wrapper');
     const canvasWrapper = document.getElementById('canvas-wrapper')
+    const inputIcon = document.getElementById('input-icon')
 
     function stopDrawing() {
       canvas.style.cursor = "auto";
@@ -443,10 +444,12 @@
 
     function hideFileInput() {
       fileInputWrapper.style.display = 'none';
+      inputIcon.style.display = 'none';
     }
 
     function showFileInput() {
       fileInputWrapper.style.display = 'block';
+      inputIcon.style.display = 'block';
     }
 
 
