--- a/floorSegment.html
+++ b/floorSegment.html
@@ -87,10 +87,10 @@
       width: 70vw;
       height: 70vh;
       cursor: pointer;
-      display: flex !important;
+      /* display: flex ;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+      flex-direction: column; */
     }
 
     #file-input-wrapper input[type=file] {
@@ -106,6 +106,10 @@
     #input-icon {
       width: 10%;
       height: 10%;
+      left: 50%;
+      top: 50%;
+      position: relative;
+      transform: translate(-50%, -50%);
     }
 
     #spinner-container {
@@ -179,7 +183,33 @@
 	  </div>
 	  <div id="file-input-wrapper">
 	  	<input type="file" id="file-input">
-      <svg id="input-icon" xmlns="http://www.w3.org/2000/svg" width="50" height="43" viewBox="0 0 50 43"><path fill="#b8b8b8" d="M48.4 26.5c-.9 0-1.7.7-1.7 1.7v11.6h-43.3v-11.6c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v13.2c0 .9.7 1.7 1.7 1.7h46.7c.9 0 1.7-.7 1.7-1.7v-13.2c0-1-.7-1.7-1.7-1.7zm-24.5 6.1c.3.3.8.5 1.2.5.4 0 .9-.2 1.2-.5l10-11.6c.7-.7.7-1.7 0-2.4s-1.7-.7-2.4 0l-7.1 8.3v-25.3c0-.9-.7-1.7-1.7-1.7s-1.7.7-1.7 1.7v25.3l-7.1-8.3c-.7-.7-1.7-.7-2.4 0s-.7 1.7 0 2.4l10 11.6z"></path></svg>
+        <svg id="input-icon" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" viewBox="0 0 183.588 183.588" xml:space="preserve">
+          <g>
+            <g>
+              <g>
+                <g>
+                  <path style="fill:#b8b8b8;" d="M183.588,169.94H0V94.158h50.394c1.99,0,3.597,1.61,3.597,3.6c0,1.986-1.61,3.6-3.597,3.6H7.19      v61.384h169.197v-61.384h-41.397c-1.997,0-3.6-1.614-3.6-3.6c0-1.993,1.603-3.6,3.6-3.6h48.597      C183.588,94.158,183.588,169.94,183.588,169.94z"/>
+                </g>
+              </g>
+              <g>
+                <g>
+                  <g>
+                    <g>
+                      <path style="fill:#b8b8b8;" d="M90.695,13.648c0.558,0,1.124,0.107,1.65,0.326c1.607,0.666,2.656,2.237,2.656,3.976v126.981        c0,2.38-1.925,4.309-4.309,4.309c-2.373,0-4.295-1.929-4.295-4.309V28.343L69.705,45.027c-1.671,1.682-4.395,1.682-6.077,0        c-1.696-1.682-1.696-4.406,0-6.088l24.028-24.036C88.476,14.085,89.582,13.648,90.695,13.648z"/>
+                    </g>
+                  </g>
+                </g>
+                <g>
+                  <g>
+                    <g>
+                      <path style="fill:#b8b8b8;" d="M90.846,13.648c1.095,0,2.197,0.419,3.042,1.256l24.028,24.036        c1.686,1.682,1.686,4.406,0,6.088s-4.402,1.682-6.08,0L87.8,20.995c-1.686-1.682-1.686-4.406,0-6.091        C88.641,14.067,89.743,13.648,90.846,13.648z"/>
+                    </g>
+                  </g>
+                </g>
+              </g>
+            </g>
+          </g>
+        </svg>    
     </div>
 	</div>
 
